--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "f77-hooks",
   "version": "0.8.0",
+  "description": "Useful react hooks for everyday use",
+  "types": "dist",
   "main": "dist/index.js",
   "repository": "git@github.com:f77se/f77-hooks.git",
   "author": "mavdmichael <michael+github@marknadsavdelningen.se>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc -p ."
+  },
   "devDependencies": {
     "typescript": "^4.4.3"
   }
