--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
   "author": "mavdmichael <michael+github@marknadsavdelningen.se>",
   "license": "MIT",
   "scripts": {
-    "clean": "del build",
+    "clean": "del dist",
     "build": "yarn clean && tsc -p .",
     "pub": "yarn version --patch && yarn build && git commit -a -m 'Release' + $npm_package_version && git push origin main && yarn publish --tag $npm_package_version",
     "pub:minor": "yarn version --minor && yarn build && git commit -a -m 'Release' + $npm_package_version && git push origin main && yarn publish --tag $npm_package_version",
     "pub:major": "yarn version --major&& yarn build && git commit -a -m 'Release' + $npm_package_version && git push origin main && yarn publish --tag $npm_package_version"
   },
   "devDependencies": {
+    "del-cli": "^4.0.1",
     "typescript": "^4.4.3"
   }
 }
