--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@f77/f77-hooks",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Useful react hooks for everyday use",
   "types": "dist",
   "main": "dist/index.js",
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "del dist",
     "build": "yarn clean && tsc -p .",
-    "pub": "yarn version --patch && yarn build && yarn publish --new-version $npm_package_version ",
+    "pub": "yarn version --patch && yarn build && yarn publish ",
     "pub:minor": "yarn version --minor && yarn build && yarn publish --new-version $npm_package_version",
     "pub:major": "yarn version --major&& yarn build && yarn publish --new-version $npm_package_version",
     "1pub": "yarn version --patch && yarn build && git commit -a -m 'Release $npm_package_version' && git push origin main && yarn publish --new-version $npm_package_version --tag $npm_package_version",
